tests/ui/trivial-bounds/trivial-bounds-leak-copy.stderr
error[E0507]: cannot move out of `*t` which is behind a shared reference
  --> $DIR/trivial-bounds-leak-copy.rs:9:5
   |
LL |     *t
   |     ^^ move occurs because `*t` has type `String`, which does not implement the `Copy` trait
   |
help: consider cloning the value if the performance cost is acceptable
   |
LL -     *t
LL +     t.clone()
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0507`.
